--- a/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/package.json
+++ b/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
+    "sass-embedded": "^1.79.1",
     "vite": "^5.3.1"
   }
 }
