--- a/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/package.json
+++ b/Leandro-Gonzalez/Portafolio-Vue/Portafolio-Vuejs/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
+    "@types/estree": "^1.0.6",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
